Aron small fix: popups default to fullscreen on small screens

--- a/src/less/global.less
+++ b/src/less/global.less
@@ -508,6 +508,7 @@ md-dialog.mw-red md-toolbar {
 h1.page-title {
     text-align: center;
     margin: 3rem 0 2rem;
+    font-size: 3.5rem;
 }
 
 @media (max-width: @screen-md-max) {
